Fix error where image would move on smaller screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,12 +43,21 @@ p {
   justify-content: center;
 }
 
+.btn-adjust{
+  margin-top: 25px;
+  border-radius: 30px;
+}
+
 .parallax{
   background-image: url("/static/images/8.jpg");
   min-height: 100%;
+  min-width: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
 
@@ -168,6 +177,11 @@ padding: 20px;
 
   .recipe_header{
     font-size: 4em;
+  }
+
+  .btn-adjust{
+    margin-top: 40px;
+    border-radius: 30px;
   }
 }
 
